--- a/doc/devs.org
+++ b/doc/devs.org
@@ -125,6 +125,7 @@ v means variable (global)
 | + | mol_formula          | fun          | string         | Determine the empirical/molecular formula of mol            |
 | + | mol_connectivity     | fun          | mol            | Use openbabel to calculate the atomic connectivity          |
 | + | mol_sanezmatrix      | fun          | mol,...        | Write a z-matrix with rotatable dihedrals                   |
+| + | mol_fromzmat         | fun          | mol,...        | Recalculate the atomic coordinates from a z-matrix          |
 
 
 ** Atom
