updated e-mails in the documentation

--- a/doc/escher.tex
+++ b/doc/escher.tex
@@ -61,7 +61,7 @@ Principado de Asturias,
 Julián Clavería 8, 33007 Oviedo, Spain
 
 \item[{Contact:}]
-\href{mailto:aoterodelaroza@ucmerced.edu}{aoterodelaroza@ucmerced.edu}
+\href{mailto:aoterodelaroza@gmail.com}{aoterodelaroza@ucmerced.edu}
 
 \item[{Address:}]
 School of Natural Sciences,
@@ -1023,7 +1023,7 @@ Required output variables:
 Copyright © 2011-2012, Víctor Luaña <\href{mailto:victor@carbono.quimica.uniovi.es}{victor@carbono.quimica.uniovi.es}>,
 Departamento de Química Física y Analítica, Universidad de Oviedo,
 E-33007 Oviedo, Principado de Asturias, Spain
-and Alberto Otero-de-la-Roza <\href{mailto:aoterodelaroza@ucmerced.edu}{aoterodelaroza@ucmerced.edu}>, School of
+and Alberto Otero-de-la-Roza <\href{mailto:aoterodelaroza@gmail.com}{aoterodelaroza@ucmerced.edu}>, School of
 Natural Sciences, University of California, Merced, 5200 North Lake Road,
 Merced, California 95343, USA.
 
